<resources>
    <string name="app_name">TCSWOM_test</string>
<string name="txv_name">基金會名稱</string>
<string name="txv_phone">聯絡電話</string>
<string name="txv_fax">傳真</string>
<string name="txv_mail">電子郵件</string>
<string name="txv_address">地址</string>
<string name="txv_area">行政區</string>
<string name="txv_link">相關網址</string>
<string name="txv_updated">最後更新日期</string>
<string name="txv_ob">服務對象</string>
<string name="txv_category">殘障類別</string>
<string name="txv_age">年齡對象</string>
</resources>