<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/darker_gray">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/dataphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_phone"
        app:layout_constraintTop_toBottomOf="@+id/dataname" />

    <TextView
        android:id="@+id/textView_fax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_fax"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_phone"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone" />

    <TextView
        android:id="@+id/datafax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_fax"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_fax"
        app:layout_constraintTop_toBottomOf="@+id/dataphone" />

    <TextView
        android:id="@+id/textView_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_fax"
        app:layout_constraintTop_toBottomOf="@+id/textView_fax" />

    <TextView
        android:id="@+id/datamail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_mail"
        app:layout_constraintTop_toBottomOf="@+id/datafax" />
    <TextView
        android:id="@+id/textView_address"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_mail"
        app:layout_constraintTop_toBottomOf="@+id/textView_mail" />

    <TextView
        android:id="@+id/dataddress"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_address"
        app:layout_constraintTop_toBottomOf="@+id/datamail" />
    <TextView
        android:id="@+id/textView_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_area"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_address"
        app:layout_constraintTop_toBottomOf="@+id/textView_address" />

    <TextView
        android:id="@+id/datarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_area"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_area"
        app:layout_constraintTop_toBottomOf="@+id/dataddress" />
    <TextView
        android:id="@+id/textView_link"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_area"
        app:layout_constraintTop_toBottomOf="@+id/textView_area" />

    <TextView
        android:id="@+id/datalink"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_link"
        app:layout_constraintTop_toBottomOf="@+id/datarea" />
    <TextView
        android:id="@+id/textView_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_updated"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_link"
        app:layout_constraintTop_toBottomOf="@+id/textView_link" />

    <TextView
        android:id="@+id/dataupdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_updated"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_updated"
        app:layout_constraintTop_toBottomOf="@+id/datalink" />
    <TextView
        android:id="@+id/textView_ob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_ob"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_updated"
        app:layout_constraintTop_toBottomOf="@+id/textView_updated" />

    <TextView
        android:id="@+id/dataob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_ob"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_ob"
        app:layout_constraintTop_toBottomOf="@+id/dataupdated" />
    <TextView
        android:id="@+id/textView_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_ob"
        app:layout_constraintTop_toBottomOf="@+id/textView_ob" />

    <TextView
        android:id="@+id/datacategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_category"
        app:layout_constraintTop_toBottomOf="@+id/dataob" />
    <TextView
        android:id="@+id/textView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txv_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView_category"
        app:layout_constraintTop_toBottomOf="@+id/textView_category" />

    <TextView
        android:id="@+id/datage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:text="@string/txv_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView_age"
        app:layout_constraintTop_toBottomOf="@+id/datacategory" />


</androidx.constraintlayout.widget.ConstraintLayout>